# CStudyGroup

./: README.md
brian.w-source/: BytePrinter.c  CMakeLists.txt  Experiments.c  board_tests.c
brian.w-source/NQueens/: pointersExercise.c  queen_tests.c
brian.w-source/NQueens/include/: board.h  queen.h
brian.w-source/The_C_Programming_Language/: chapter1-1.c  chapter1-2.c  chapter1-3.c  chapter1-5-1.c  chapter1-5-3.c  chapter1-5-3_Exercise1-10.c  chapter1-5-3_Exercise1-8.c  chapter1-5-3_Exercise1-9.c  chapter1-5-4_Example.c  chapter1-5-4_Exercise1-12.c  main.c
brian.w-source/include/: Cunit.h  board.h
common/include/: minunit.h
lesson-source/example001-minunit/: compile.sh  minunit-demo.c
lesson-source/lesson001-hello/: goals
lesson-source/lesson002-funda/: control.c
lesson-source/lesson003-memory/: memory.c
lesson-source/lesson004-structs/: structs.c
lesson-source/project001-cp/: copy  copy.c  goals
lesson001-hello/: hello.c
lesson002-funda/: dump  readme
